# POS-ERPNextv15-app

./: .gitignore  LICENSE  MANUAL_SETUP.md  README.md  SETUP_COMPLETE.md  modules.txt  pyproject.toml  requirements.txt
POS-ERPNextv15-app/: __init__.py  pos_invoice.py
POS-ERPNextv15-app/pos_erpnext_v15_app/: hooks.py  install.py  modules.txt
POS-ERPNextv15-app/pos_erpnext_v15_app/doctype/: __init__.py
POS-ERPNextv15-app/pos_erpnext_v15_app/doctype/pos_payment_method/: __init__.py
POS-ERPNextv15-app/pos_erpnext_v15_app/doctype/pos_profile/: pos_profile.json  pos_profile.py
api/: pos_api.py
pos_erpnext_v15_app/pos_erpnext_v15_app/api/: pos_api.py
pos_erpnext_v15_app/pos_erpnext_v15_app/doctype/pos_profile/: __init__.py
print_format/pos_receipt/: pos_receipt.json
simple_pos/: __init__.py  hooks.py  install.py  setup.py
simple_pos/doctype/pos_account/: pos_account.json  pos_account.py
simple_pos/doctype/pos_customer_group/: pos_customer_group.json
simple_pos/doctype/pos_item_group/: pos_item_group.py
simple_pos/doctype/pos_payment_method/: pos_payment_method.json  pos_payment_method.py
simple_pos/doctype/pos_profile/: pos_profile.py
simple_pos/page/pos/: pos.js
simple_pos/print_format/pos_receipt/: pos_receipt.html
simple_pos/report/pos_sales_report/: pos_sales_report.json  pos_sales_report.py
simple_pos/simple_pos/: pos_invoice.py  setup.py
simple_pos/simple_pos/doctype/pos_customer_group/: pos_customer_group.py
simple_pos/simple_pos/doctype/pos_item_group/: pos_item_group.json
simple_pos/simple_pos/doctype/pos_profile/: pos_profile.json
simple_pos/simple_pos/page/pos/: pos.css  pos.html  pos.json
simple_pos/workspace/pos_workspace/: pos_workspace.json
