[project]
name = "simple_pos"
authors = [
    { name = "Ark143", email = "support@example.com"}
]
description = "Simple Point of Sale Application for ERPNext v15"
requires-python = ">=3.8"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # Managed by bench via tool.bench.frappe-dependencies
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"
